--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+:root {
+  --mdc-theme-primary: sandybrown;
+  --mdc-theme-secondary: #feeae6;
+
+  --moja-siva: rgb(238, 230, 230);
+}
+
+body {
+  margin: 0;
+}
 .page {
   width: 100%;
   margin: 0 auto;
@@ -13,25 +23,36 @@
   margin-top: 0;
   display: flex;
 }
+.header-item {
+  flex: 1 1 0px;
+  flex-basis: 0;
+  flex-basis: 100%;
+  display: flex;
+  justify-content: center;
+}
+.header-item.menu {
+  justify-content: flex-end;
+}
 .logo {
   /* display: flex;*/
   /* justify-content: center;*/
-  background-image: url("Logo_black.png");
-  width: 165px;
-  height: 50px;
-  background-repeat: no-repeat;
+  /* background-image: url("Logo_black.png"); */
+  /* width: 165px; */
+  /* height: 50px; */
+  /* background-repeat: no-repeat; */
   /*background-attachment: fixed;*/
   background-position: center;
+  width: 150px;
+  height: 60px;
   /*z-index: 2;*/
   /*position:asolute;*/
   /*z-index: 2;*/
-  margin-left: 600px;
+  background: url("Logo_white.png") no-repeat;
+  background-size: contain;
 }
 .logo:hover {
   background-image: url("logoch.png");
-  width: 165px;
-  height: 50px;
-  background-repeat: no-repeat;
+  background-position-y: -20px;
 }
 .dropbtn {
   background-color: sandybrown;
@@ -46,7 +67,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
-  margin-left: 380px;
+  margin-right: 10px;
 }
 
 .dropdown-content {
@@ -56,6 +77,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  right: 1px;
 }
 
 .dropdown-content a {
@@ -81,10 +103,54 @@
 .intro {
   display: flex;
   position: absolute;
-  top: 75%;
+  top: 65%;
   left: 85px;
   font-family: Arial, Helvetica, sans-serif;
 }
+.slide-container {
+  width: 1400px;
+  height: 797px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  text-align: center;
+}
+.image-container {
+  width: 4200px;
+  height: 797px;
+  position: relative;
+  transition: left 2s;
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s;
+  -o-transition: left 2s;
+}
+
+.slider-image {
+  float: left;
+  margin: 0px;
+  padding: 0px;
+}
+.button-container {
+  top: -200px;
+  position: relative;
+}
+.slider-button {
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  background-color: white;
+}
+#slider-image-1:target ~ .image-container {
+  left: 0px;
+}
+#slider-image-2:target ~ .image-container {
+  left: -1400px;
+}
+#slider-image-3:target ~ .image-container {
+  left: -2800px;
+}
+
 .photo img {
   margin-top: 50px;
   width: 100%;
@@ -93,13 +159,7 @@
   height: 800px;
   justify-content: center;
 }
-.title {
-  display: flex;
-  background-color: rgb(238, 230, 230);
-  width: 100%;
-  padding-left: 85px;
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 .logo_big {
   width: 300px;
   height: 100px;
@@ -108,21 +168,6 @@
   left: 80%;
   transform: translate(-50%, -50%);
 }
-
-.content {
-  display: flex;
-  background-color: rgb(238, 230, 230);
-  width: 100%;
-  height: 300px;
-  justify-content: space-around;
-}
-.loremipsum {
-  width: 500px;
-  font-size: 18px;
-  text-align: justify;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .myButton {
   background-color: transparent;
   border-radius: 28px;
@@ -140,8 +185,75 @@
 }
 .myButton:hover {
   background-color: sandybrown;
+  opacity: 0.7;
 }
 .myButton:active {
   position: relative;
   top: 1px;
+}
+.title {
+  display: flex;
+  background-color: rgb(238, 230, 230);
+  /* background-color: #ffc0cb; pink */
+  width: 100%;
+  padding-left: 85px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: -54px;
+}
+.content {
+  display: flex;
+  background-color: var(--moja-siva);
+  width: 100%;
+  height: 300px;
+  justify-content: space-around;
+}
+.text {
+  width: 500px;
+  font-size: 18px;
+  text-align: justify;
+  font-family: Arial, Helvetica, sans-serif;
+}
+#size {
+  width: 200px;
+  height: 50px;
+  margin-left: 35px;
+}
+/*.my-card__media {
+  background-image: url("newyork.jpg");
+}*/
+.cardHolder {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.mdc-card {
+  width: 400px;
+  margin-left: 20px;
+}
+.mdc-typography--headline6 {
+  padding-left: 10px;
+}
+.mdc-typography--subtitle2 {
+  padding-left: 10px;
+}
+.mdc-typography--body2 {
+  padding-left: 10px;
+}
+.mdc-card__primary-action {
+  background-color: rgb(238, 230, 230);
+}
+.mdc-card__actions {
+  background-color: #e4ddc8;
+}
+.tabs {
+  display: flex;
+  justify-content: space-around;
+}
+.proba {
+  background-image: url("road.jpg");
+  opacity: 0.8;
+}
+
+.proba:hover {
+  opacity: 1;
 }
